--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "wp"]
 	path = wp
 	url = git@github.com:WordPress/WordPress.git
+[submodule "content/mu-plugins/co-authors-plus"]
+	path = content/mu-plugins/co-authors-plus
+	url = git@github.com:Automattic/Co-Authors-Plus.git
